<resources>
    <string name="app_name">Click N Pick</string>
    <string name="set_server_ip">Set Server IP</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="vendor_sign_up">Vendor Sign Up</string>
    <string name="customer_sign_up">Customer Sign Up</string>
    <string name="vendor_login">Vendor Login</string>
    <string name="customer_login">Customer Login</string>
    <string name="enter_your_shop_location">Enter your shop location:</string>
    <string name="submit">Submit</string>
    <string name="enter_contact_number">Enter Contact number:</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="enter_your_username">Enter your username:</string>
    <string name="phone_number">Phone number:</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="title_activity_vendor">VendorActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="feedback_and_reporting">Feedback and Reporting</string>
    <string name="notifications">Notifications</string>
    <string name="my_account">My Account</string>
    <string name="home">Home</string>
    <string name="received_orders">Received Orders</string>
    <string name="edit_items">Edit Items</string>
    <string name="shop_name">Shop Name:</string>
    <string name="change">Change</string>
    <string name="update">Update</string>
    <string name="contact_number">Contact Number</string>
    <string name="change_password">Change Password</string>
    <string name="order_list">Order List</string>
    <string name="enter_your_email">Enter your email:</string>
    <string name="write_your_message">Write your message:</string>
    <string name="feedback_info">You can also contact us anytime at RMUR.Enterprises@gmail.com</string>

    <string name="order_id_d">Order id: %d</string>
    <string name="pickup_time_s">Pickup Time: %s</string>
    <string name="status_s">Status: %s</string>
    <string name="user_id_d">User id: %d</string>

    <string name="items_s">Items:
%s</string>
    <string name="items">Items:</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="item_id_d">Item ID: %d</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total_price_d">Total price: %d</string>
    <string name="d_items">%d items</string>
    <string name="cancel">Cancel</string>
    <string name="reason_s">Reason: %s</string>

</resources>
