<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/itemsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_items"
        android:textColor="#333"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/pickupTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_time_s"
        android:textColor="#333"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_s"
        android:textColor="#333"
        android:textSize="16sp" />

</LinearLayout>
